--- a/form.css
+++ b/form.css
@@ -1,90 +1,278 @@
-.card{
-    width: 300px;
-    background-color: #fff;
-    box-shadow: 2px 5px 20px black;
-    font-family: sans-serif;
-    padding: 3rem;
-    margin: 0;
+@media screen and(max-width:480px) {
+    .card{
+        width: 300px;
+        background-color: #fff;
+        box-shadow: 2px 5px 20px black;
+        font-family: sans-serif;
+        padding: 3rem;
+        margin: 0;
+    }
+    .title{
+        text-align: center;
+        font-weight: bold;
+        margin: 0;
+    }
+    .h2{
+        text-align: center;
+    }
+    .subtitle{
+        text-align: center;
+        font-weight: bold;
+    }
+    .a{
+        text-decoration: none;
+        color: rgb(43, 43, 180);
+    
+    }
+    .fa-brands{
+        width: 24px;
+        font-size: 22px;
+    }
+    .btn-text{
+        margin: 0;
+    }
+    .social-login{
+        display: flex;
+        justify-content: center;
+        gap: 5px;
+    }
+    .google{
+        background: #fff;
+        border: solid 2px rgb(245, 241, 241);
+        border-radius: 8px;
+        font-weight: bold;
+        padding: 10px 10px;
+        display: flex;
+        flex: auto;
+        align-items: center;
+        gap: 5px;
+        justify-content: center;
+    }
+    .github{
+        background: #fff;
+        border: solid rgba(0, 0, 0, 0.89) 2px;
+        padding: 10px;
+        display: flex;
+        align-items: center;
+    }
+    .or{
+        border-bottom: 2px solid gainsboro;
+        text-align: center;
+        line-height: 0.1em;
+        margin: 25px 0;
+        font-size: 0.8em;
+    }
+    .or span{
+        background: #fff;
+        padding: 0;
+    }
+    .email-login{
+        display: flex;
+        flex-direction: column;
+    }
+    .email-login label{
+        color: rgb(45, 99, 146);
+    }
+    input{
+        border: 1px solid #e7dede;
+        padding: 15px 20px;
+        margin: 8px 0 8px 0;
+        border-radius: 8px;
+        /* box-sizing: border-box; */
+        /* margin-top: 8px;
+        margin-bottom: 8px; */
+    }
+    .Forgot-password{
+        font-family: sans-serif;
+        text-decoration: none;
+    }
+    .Submit{
+        cursor:pointer;
+    }
 }
-.title{
-    text-align: center;
-    font-weight: bold;
-    margin: 0;
-}
-.h2{
-    text-align: center;
-}
-.subtitle{
-    text-align: center;
-    font-weight: bold;
-}
-.a{
-    text-decoration: none;
-    color: rgb(43, 43, 180);
 
+@media screen and(max-width:768px) {
+    .card{
+        width: 300px;
+        background-color: #fff;
+        box-shadow: 2px 5px 20px black;
+        font-family: sans-serif;
+        padding: 3rem;
+        margin: 0;
+    }
+    .title{
+        text-align: center;
+        font-weight: bold;
+        margin: 0;
+    }
+    .h2{
+        text-align: center;
+    }
+    .subtitle{
+        text-align: center;
+        font-weight: bold;
+    }
+    .a{
+        text-decoration: none;
+        color: rgb(43, 43, 180);
+    
+    }
+    .fa-brands{
+        width: 24px;
+        font-size: 22px;
+    }
+    .btn-text{
+        margin: 0;
+    }
+    .social-login{
+        display: flex;
+        justify-content: center;
+        gap: 5px;
+    }
+    .google{
+        background: #fff;
+        border: solid 2px rgb(245, 241, 241);
+        border-radius: 8px;
+        font-weight: bold;
+        padding: 10px 10px;
+        display: flex;
+        flex: auto;
+        align-items: center;
+        gap: 5px;
+        justify-content: center;
+    }
+    .github{
+        background: #fff;
+        border: solid rgba(0, 0, 0, 0.89) 2px;
+        padding: 10px;
+        display: flex;
+        align-items: center;
+    }
+    .or{
+        border-bottom: 2px solid gainsboro;
+        text-align: center;
+        line-height: 0.1em;
+        margin: 25px 0;
+        font-size: 0.8em;
+    }
+    .or span{
+        background: #fff;
+        padding: 0;
+    }
+    .email-login{
+        display: flex;
+        flex-direction: column;
+    }
+    .email-login label{
+        color: rgb(45, 99, 146);
+    }
+    input{
+        border: 1px solid #e7dede;
+        padding: 15px 20px;
+        margin: 8px 0 8px 0;
+        border-radius: 8px;
+        /* box-sizing: border-box; */
+        /* margin-top: 8px;
+        margin-bottom: 8px; */
+    }
+    .Forgot-password{
+        font-family: sans-serif;
+        text-decoration: none;
+    }
+    .Submit{
+        cursor:pointer;
+    }
 }
-.fa-brands{
-    width: 24px;
-    font-size: 22px;
-}
-.btn-text{
-    margin: 0;
-}
-.social-login{
-    display: flex;
-    justify-content: center;
-    gap: 5px;
-}
-.google{
-    background: #fff;
-    border: solid 2px rgb(245, 241, 241);
-    border-radius: 8px;
-    font-weight: bold;
-    padding: 10px 10px;
-    display: flex;
-    flex: auto;
-    align-items: center;
-    gap: 5px;
-    justify-content: center;
-}
-.github{
-    background: #fff;
-    border: solid rgba(0, 0, 0, 0.89) 2px;
-    padding: 10px;
-    display: flex;
-    align-items: center;
-}
-.or{
-    border-bottom: 2px solid gainsboro;
-    text-align: center;
-    line-height: 0.1em;
-    margin: 25px 0;
-    font-size: 0.8em;
-}
-.or span{
-    background: #fff;
-    padding: 0;
-}
-.email-login{
-    display: flex;
-    flex-direction: column;
-}
-.email-login label{
-    color: rgb(45, 99, 146);
-}
-input{
-    border: 1px solid #e7dede;
-    padding: 15px 20px;
-    margin: 8px 0 8px 0;
-    border-radius: 8px;
-    /* box-sizing: border-box; */
-    /* margin-top: 8px;
-    margin-bottom: 8px; */
-}
-.Forgot-password{
-    font-family: sans-serif;
-    text-decoration: none;
-}
-.Submit{
-    cursor:pointer;
+
+@media screen and (min-width: 1200px){
+    .card{
+        width: 300px;
+        background-color: #fff;
+        box-shadow: 2px 5px 20px black;
+        font-family: sans-serif;
+        padding: 3rem;
+        margin: 0;
+    }
+    .title{
+        text-align: center;
+        font-weight: bold;
+        margin: 0;
+    }
+    .h2{
+        text-align: center;
+    }
+    .subtitle{
+        text-align: center;
+        font-weight: bold;
+    }
+    .a{
+        text-decoration: none;
+        color: rgb(43, 43, 180);
+    
+    }
+    .fa-brands{
+        width: 24px;
+        font-size: 22px;
+    }
+    .btn-text{
+        margin: 0;
+    }
+    .social-login{
+        display: flex;
+        justify-content: center;
+        gap: 5px;
+    }
+    .google{
+        background: #fff;
+        border: solid 2px rgb(245, 241, 241);
+        border-radius: 8px;
+        font-weight: bold;
+        padding: 10px 10px;
+        display: flex;
+        flex: auto;
+        align-items: center;
+        gap: 5px;
+        justify-content: center;
+    }
+    .github{
+        background: #fff;
+        border: solid rgba(0, 0, 0, 0.89) 2px;
+        padding: 10px;
+        display: flex;
+        align-items: center;
+    }
+    .or{
+        border-bottom: 2px solid gainsboro;
+        text-align: center;
+        line-height: 0.1em;
+        margin: 25px 0;
+        font-size: 0.8em;
+    }
+    .or span{
+        background: #fff;
+        padding: 0;
+    }
+    .email-login{
+        display: flex;
+        flex-direction: column;
+    }
+    .email-login label{
+        color: rgb(45, 99, 146);
+    }
+    input{
+        border: 1px solid #e7dede;
+        padding: 15px 20px;
+        margin: 8px 0 8px 0;
+        border-radius: 8px;
+        /* box-sizing: border-box; */
+        /* margin-top: 8px;
+        margin-bottom: 8px; */
+    }
+    .Forgot-password{
+        font-family: sans-serif;
+        text-decoration: none;
+    }
+    .Submit{
+        cursor:pointer;
+    }
 }
