--- a/form.css
+++ b/form.css
@@ -77,6 +77,7 @@ input{
     padding: 15px 20px;
     margin: 8px 0 8px 0;
     border-radius: 8px;
+    position: relative;
     /* box-sizing: border-box; */
     /* margin-top: 8px;
     margin-bottom: 8px; */
@@ -87,4 +88,14 @@ input{
 }
 .Submit{
     cursor:pointer;
+}
+.fa-eye{
+    position: absolute;
+    top: 38%;
+    right: 64%;
+
+}
+
+.fa-google{
+    color: rgb(81, 81, 230);
 }
