--- a/form.css
+++ b/form.css
@@ -36,7 +36,7 @@
     gap: 5px;
 }
 .google{
-    background: #fff;
+    background: #d6dbe2;
     border: solid 2px rgb(245, 241, 241);
     border-radius: 8px;
     font-weight: bold;
@@ -90,6 +90,7 @@ input{
     cursor:pointer;
 }
 .fa-eye{
+    display: flex;
     position: absolute;
     top: 38%;
     right: 64%;
